Created Home & Menu pages.

--- a/dest/menu.html
+++ b/dest/menu.html
@@ -33,20 +33,79 @@
   </head>
   <body class="is-dark">
     <!-- HEADER :: START-->
-    <nav class="header" id="header">
+    <nav class="header header--inner" id="header">
       <div class="header__wrapper">
         <div class="header__wrapper-left">
-          <div class="logo logo--header"><a class="logo__btn" href="#"><img src="img/logo-black.svg" alt=""><img src="img/logo-icon.svg" alt=""></a></div>
+          <div class="logo logo--header"><a class="logo__btn" href="#"><img src="img/logo-white.svg" alt=""><img src="img/logo-icon.svg" alt=""></a></div>
         </div>
         <div class="header__wrapper-right">
-          <div class="c-btn__wrapper"><a class="c-btn" href="#">Join <span>the Resistance</span></a></div>
+          <div class="c-dropdown__wrapper"><a class="c-dropdown__toggle" href="#"><img src="img/icon-ethereum.svg" alt=""><span>Ethereum</span><i class="icon-font icon-chevron-down"></i></a>
+            <div class="c-dropdown">
+              <div><a href="#"><img src="img/icon-ethereum.svg" alt=""><span>Ethereum</span></a><a href="#"><img src="img/icon-polygon.svg" alt=""><span>Polygon</span></a></div>
+            </div>
+          </div>
+          <div class="c-btn__wrapper"><a class="c-btn c-btn--bg" href="#">Connect Wallet</a></div>
         </div>
       </div>
     </nav>
     <!-- HEADER :: END-->
     <main class="main p-home"></main>
+    <section class="section" id="section">
+      <div class="section__wrapper">
+        <div>
+          <!-- SECTION :: START-->
+          <section class="menu" id="menu">
+            <div class="menu__block-wrapper">
+              <div><a class="menu__block" href="#">
+                  <div class="menu__block-bg"></div>
+                  <div class="menu__block-content">
+                    <h3>Staking</h3>
+                    <hr>
+                    <p>Provide liquidity and receive bonus yield in the form of $RSIST emissions</p>
+                  </div></a></div>
+              <div><a class="menu__block" href="#">
+                  <div class="menu__block-bg"></div>
+                  <div class="menu__block-content">
+                    <h3>Playground</h3>
+                    <hr>
+                    <p>Our OTC marketplace to buy, sell and trade pre-release tokens.</p>
+                  </div></a></div>
+              <div><a class="menu__block" href="#">
+                  <div class="menu__block-bg"></div>
+                  <div class="menu__block-content">
+                    <h3>Bridge</h3>
+                    <hr>
+                    <p>Coming soon. Simple, low-cost stable multi-chain stable bridging.</p>
+                  </div></a></div>
+              <div><a class="menu__block" href="#">
+                  <div class="menu__block-bg"></div>
+                  <div class="menu__block-content">
+                    <h3>Venture</h3>
+                    <hr>
+                    <p>Click here to learn how $RSIST token holders can participate in our DAO's venture investments.</p>
+                  </div></a></div>
+              <div><a class="menu__block" href="#">
+                  <div class="menu__block-bg"></div>
+                  <div class="menu__block-content">
+                    <h3>Toolkit</h3>
+                    <hr>
+                    <p>Click here to learn your DAO's can use our Venture Window toolkit to automate your fundraising.</p>
+                  </div></a></div>
+              <div><a class="menu__block" href="#">
+                  <div class="menu__block-bg"></div>
+                  <div class="menu__block-content">
+                    <h3>Learn More</h3>
+                    <hr>
+                    <p>Find out how to participate in our dynamic public sale, read our whitepaper and more.</p>
+                  </div></a></div>
+            </div>
+          </section>
+          <!-- SECTION :: END-->
+        </div>
+      </div>
+    </section>
     <!-- FOOTER :: START-->
-    <footer class="footer" id="footer">
+    <footer class="footer footer--wbg" id="footer">
       <div class="c-grid">
         <div class="footer__wrapper">
           <div class="footer__social"><a href="#"><i class="icon-font icon-medium"></i></a><a href="#"><i class="icon-font icon-twitter"></i></a><a href="#"><i class="icon-font icon-discord"></i></a></div>
