Created Staking page.

--- a/dest/temporary-page.html
+++ b/dest/temporary-page.html
@@ -61,8 +61,13 @@
               <p class="temporary__subtitle">Please leave your email, <br>and we’ll notify you once it’s done</p>
               <form class="temporary__form">
                 <div>
+                  <!-- .is-error-->
                   <label>
                     <input type="email" name="" placeholder="Enter your email" required>
+                    <!--span
+                    img(src="img/icon-alert.svg" alt="")
+                    | Incorrect Email
+                    -->
                   </label>
                 </div>
                 <div>
