--- a/dest/fundraising.html
+++ b/dest/fundraising.html
@@ -224,7 +224,7 @@
     </footer>
     <!-- FOOTER :: END-->
     <div class="c-modal mfp-hide mfp-with-anim" id="fundraisingDonation">
-          <div class="modal__body"><img class="c-modal__logo" src="img/icon-welcome.svg" alt="">
+          <div class="modal__body"><img class="c-modal__logo" src="img/logo-modal.svg" alt="">
             <p class="c-modal__title">Congratulations!</p>
             <div class="c-modal__line"></div>
             <div class="c-modal__desc-wrapper">
