Playground pages :::  - revision;

--- a/dest/playground-step-2.html
+++ b/dest/playground-step-2.html
@@ -39,44 +39,31 @@
         <div class="playground__section">
           <div class="playground__section-left">
             <div><a class="playground__box" href="#">
-                <div class="playground__box-head">
-                  <div class="playground__box-header">
-                    <div><span>12eij13jlk12312asdioasdgaosdb</span></div>
-                    <div>
-                      <p class="playground__box-badge">14h 34m 35s</p>
-                    </div>
+                <div class="playground__box-top">
+                  <div><img src="img/circle-logo.svg" alt="">
+                    <p>preRSIST</p>
                   </div>
-                  <div class="playground__box-num"><img src="img/img-playground-box-bg.svg" alt="">
-                    <p>345</p>
+                  <div><span>-14h 34m 35s</span></div>
+                </div>
+                <div class="playground__box-head">
+                  <div>
+                    <div class="playground__box-visual"><img src="img/img-venture.svg" alt="">
+                      <p>100</p>
+                    </div>
                   </div>
                 </div>
                 <div class="playground__box-body">
-                  <ul class="playground__box-list">
+                  <ul>
                     <li>
-                      <div>
-                        <p>Amount</p>
-                      </div>
-                      <div>
-                        <p>345.00</p>
-                      </div>
+                      <p>Amount: 210.00</p>
                     </li>
                     <li>
-                      <div>
-                        <p>Current bid</p>
-                      </div>
-                      <div><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="">
-                        <p>1453.00</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <p>Buy now price</p>
-                      </div>
-                      <div><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="">
-                        <p>2100.00</p>
-                      </div>
+                      <p>Reserve Price: <span class='green'>2000</span></p>
                     </li>
                   </ul>
+                </div>
+                <div class="playground__box-footer">
+                  <p><span>Current Bid:</span><img src="img/circle-logo.svg" alt=""><span>1920.00</span></p>
                 </div></a></div>
           </div>
           <div class="playground__section-right">
