--- a/dest/playground-step-8.html
+++ b/dest/playground-step-8.html
@@ -67,7 +67,7 @@
               <h2 class="playground__title">List Token</h2>
               <form class="playground__form playground__form--last" action="" method="" autocomplete="off">
                 <div class="playground__form-field">
-                  <div class="staking__toggle"><a href="#">Fixed Price</a><a class="is-active" href="#">Auction</a></div>
+                  <div class="staking__toggle"><a class="is-active" href="#">Fixed Price</a><a href="#">Auction</a></div>
                 </div>
                 <div class="playground__form-field">
                   <p class="playground__form-label">Amount</p>
@@ -78,28 +78,11 @@
                 <div class="playground__form-field">
                   <p class="playground__form-info">Only ‘pre’ tokens are eligible to be listed.</p>
                 </div>
-                <!--.playground__form-field-->
-                <!--  p.playground__form-label Buy now price-->
-                <!--  label.is-full-->
-                <!--    input(type='text' name='' placeholder='' value='5000.00')-->
-                <!--    img(src="img/logo-playground.png" srcset='img/logo-playground@2x.png 2x' alt="")-->
-                <div class="playground__form-group">
-                  <div>
-                    <div class="playground__form-field">
-                      <p class="playground__form-label">Reserve Price</p>
-                      <label class="is-full">
-                        <input type="text" name="" placeholder="" value="4300.00"><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="">
-                      </label>
-                    </div>
-                  </div>
-                  <div>
-                    <div class="playground__form-field">
-                      <p class="playground__form-label">Time Limit</p>
-                      <label class="is-full">
-                        <input type="text" name="" placeholder="" value="12:30"><img src="img/latest.svg" alt="">
-                      </label>
-                    </div>
-                  </div>
+                <div class="playground__form-field">
+                  <p class="playground__form-label">Price</p>
+                  <label class="is-full">
+                    <input type="text" name="" placeholder="" value="5000.00"><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="">
+                  </label>
                 </div>
               </form>
               <div class="c-btn__wrapper c-btn__wrapper--center"><a class="c-btn c-btn--bg" href="#">List</a></div><a class="playground__back" href="#">Cancel</a>
