--- a/dest/playground-step-1-1.html
+++ b/dest/playground-step-1-1.html
@@ -76,11 +76,7 @@
               </div>
             </div>
             <div>
-              <div class="c-dropdown__wrapper"><a class="c-dropdown__toggle" href="#"><span>Filter by</span><i class="icon-font icon-chevron-down"></i></a>
-                <div class="c-dropdown">
-                  <div><a href="#"><span>Action 1</span></a><a href="#"><span>Action 2</span></a></div>
-                </div>
-              </div>
+              <div class="staking__btn c-btn__wrapper"><a class="c-btn" href="#playgroundFilter" data-effect="mfp-zoom-in" popup-js>Filters</a></div>
               <div class="c-dropdown__wrapper"><a class="c-dropdown__toggle" href="#"><span>Sort by</span><i class="icon-font icon-chevron-down"></i></a>
                 <div class="c-dropdown">
                   <div><a href="#"><span>Price</span></a><a href="#"><span>Amount</span></a><a href="#"><span>Time Left</span></a></div>
@@ -414,6 +410,61 @@
       </section>
       <!-- SECTION :: END-->
     </main>
+    <div id="fundraisingOverlay"></div>
+    <div class="c-modal mfp-hide mfp-with-anim" id="playgroundFilter">
+          <div class="modal__body">
+            <p class="c-modal__title">Filters</p>
+            <div class="c-modal__line"></div>
+            <form class="c-modal__form" action="" method="">
+              <div class="c-modal__form-field">
+                <p class="c-modal__form-label">Price Range</p>
+                <div class="c-modal__form-group">
+                  <div>
+                    <label>
+                      <div class="c-dropdown__wrapper"><a class="c-dropdown__toggle" href="#"><img src="img/icon-ethereum.svg" alt=""><span>Ethereum</span><i class="icon-font icon-chevron-down"></i></a>
+                        <div class="c-dropdown">
+                          <div><a href="#"><img src="img/icon-ethereum.svg" alt=""><span>Ethereum</span></a><a href="#"><img src="img/icon-polygon.svg" alt=""><span>Polygon</span></a></div>
+                        </div>
+                      </div>
+                    </label>
+                  </div>
+                  <div>
+                    <div class="c-modal__form-field">
+                      <label>
+                        <input type="text" name="" placeholder="Min">
+                        <u></u>
+                        <input type="text" name="" placeholder="Max">
+                      </label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="c-modal__form-field">
+                <p class="c-modal__form-label">Offer Type</p>
+                <label>
+                  <div class="c-dropdown__wrapper"><a class="c-dropdown__toggle" href="#"><span>Fixed Price</span><i class="icon-font icon-chevron-down"></i></a>
+                    <div class="c-dropdown">
+                      <div><a href="#"><span>Action 1</span></a><a href="#"><span>Action 2</span></a><a href="#"><span>Action 3</span></a></div>
+                    </div>
+                  </div>
+                </label>
+              </div>
+              <div class="c-modal__form-field">
+                <p class="c-modal__form-label">Tokens</p>
+                <label>
+                  <div class="c-dropdown__wrapper"><a class="c-dropdown__toggle" href="#"><span>All</span><i class="icon-font icon-chevron-down"></i></a>
+                    <div class="c-dropdown">
+                      <div><a href="#"><span>Action 1</span></a><a href="#"><span>Action 2</span></a><a href="#"><span>Action 3</span></a></div>
+                    </div>
+                  </div>
+                </label>
+              </div>
+              <div class="c-modal__form-field">
+                <div class="c-btn__wrapper"><a class="c-modal__clear" href="#">Clear</a><a class="c-btn c-btn--bg" href="#">Apply</a></div>
+              </div>
+            </form>
+          </div>
+    </div>
   </body>
   <!-- SCRIPT :: START-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
