--- a/dest/playground-step-5.html
+++ b/dest/playground-step-5.html
@@ -59,51 +59,32 @@
         <div class="playground__section">
           <div class="playground__section-left">
             <div><a class="playground__box" href="#">
+                <div class="playground__box-top">
+                  <div><img src="img/circle-logo.svg" alt="">
+                    <p>preRSIST</p>
+                  </div>
+                  <div></div>
+                </div>
                 <div class="playground__box-head">
-                  <div class="playground__box-header">
-                    <div><span>12eij13jlk12312asdioasdgaosdb</span></div>
-                    <div>
-                      <p class="playground__box-badge">14h 34m 35s</p>
+                  <div>
+                    <div class="playground__box-visual"><img src="img/img-venture.svg" alt="">
+                      <p>100</p>
                     </div>
                   </div>
-                  <div class="playground__box-num"><img src="img/img-playground-box-bg.svg" alt="">
-                    <p>345</p>
-                  </div>
-                </div>
-                <div class="playground__box-body">
-                  <ul class="playground__box-list">
-                    <li>
-                      <div>
-                        <p>Amount</p>
-                      </div>
-                      <div>
-                        <p>345.00</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <p>Current bid</p>
-                      </div>
-                      <div><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="">
-                        <p>1453.00</p>
-                      </div>
-                    </li>
-                    <li>
-                      <div>
-                        <p>Buy now price</p>
-                      </div>
-                      <div><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt="">
-                        <p>2100.00</p>
-                      </div>
-                    </li>
-                  </ul>
                 </div></a></div>
           </div>
           <div class="playground__section-right">
             <div>
+              <h2 class="playground__title">Make Offer</h2>
               <form class="playground__form" action="" method="" autocomplete="off">
                 <div class="playground__form-field">
-                  <p class="playground__form-label">Make an Offer</p>
+                  <p class="playground__form-label">Amount</p>
+                  <label>
+                    <input type="text" name="" placeholder=""><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt=""><span>/ 6571.22 USDC</span>
+                  </label>
+                </div>
+                <div class="playground__form-field">
+                  <p class="playground__form-label">Offer</p>
                   <label>
                     <input type="text" name="" placeholder=""><img src="img/logo-playground.png" srcset="img/logo-playground@2x.png 2x" alt=""><span>/ 6571.22 USDC</span>
                   </label>
